# agora-forum

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  SERVER-GUIDE.md  USER-GUIDE.md  configure-boards.sh  dev-server.sh  dev.py  install-server.sh  install.sh
.github/workflows/: release.yml
crates/agora-client/: Cargo.toml
crates/agora-client/src/: api.rs  cache.rs  config.rs  editor.rs  identity.rs  main.rs
crates/agora-client/src/cli/: attach.rs  bio.rs  boards.rs  bookmark.rs  dm.rs  edit.rs  guide.rs  image.rs  invite.rs  members.rs  mentions.rs  mod.rs  post.rs  profile.rs  react.rs  read.rs  reply.rs  search.rs  servers.rs  setup.rs  threads.rs
crates/agora-client/src/tui/: app.rs  boards.rs  bookmarks.rs  input.rs  invites.rs  markdown.rs  members.rs  mentions.rs  messages.rs  mod.rs  search.rs  server_picker.rs  status.rs  thread.rs  threads.rs
crates/agora-common/: Cargo.toml
crates/agora-common/src/: lib.rs
crates/agora-server/: Cargo.toml
crates/agora-server/src/: auth.rs  db.rs  main.rs  models.rs  rate_limit.rs  routes.rs  validation.rs
tests/: test_e2e.py
