[package]
name = "agora-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agora"
path = "src/main.rs"

[dependencies]
agora-common = { path = "../agora-common" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
urlencoding = "2"
crypto_box = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
curve25519-dalek = "4"
hex = "0.4"
